# haskell-life-game

./: LICENSE  README.md  haskell-life-game.cabal
life-game/: Main.hs
smooth-life/: Main.hs
