name:                haskell-life-game
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable life-game
  hs-source-dirs:      life-game
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mwc-random
                     , gloss
  default-language:    Haskell2010

executable smooth-life
  hs-source-dirs:      smooth-life
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mwc-random
                     , gloss
  default-language:    Haskell2010
